fix(tip-calculator-app): fix custom field placeholder text being cut off

--- a/tip-calculator-app/src/scss/components/_tip-calculator-form.scss
+++ b/tip-calculator-app/src/scss/components/_tip-calculator-form.scss
@@ -82,6 +82,10 @@
       margin-bottom: 4rem;
       column-gap: 1.4rem;
       row-gap: 1.6rem;
+
+      input {
+        padding: 0.6rem 1.4rem;
+      }
     }
   }
 
